--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,19 @@
 
 # debug information files
 *.dwo
+
+# Directories
+**bin/
+**bin-int/
+
+# Files
+*.user
+*imgui.ini
+
+# Visual Studio
+.vs/
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
